# cutensor

./: CMakeLists.txt  README.md  cutensor-scm-1.rockspec  dtensor.lua  init.lua
test/: test.lua
